Another feeble attempt to get fixed backgrounds on mobile.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,19 +7,15 @@
 }
 
 html {
-  height: 100vh;
-}
-
-html {
   position: relative;
   &:after {
     display: block;
     content: "";
     position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
     background-image: url("/images/body_bg.jpg");
     background-repeat: no-repeat;
     background-position: center;
